# convex_dynamics

./: CMakeLists.txt  LICENSE  README.md  iteration.cpp  points.cin  points.json  polygon.cpp  polygon.hpp  rounding.cpp  rounding.hpp
